update post bamm analysis

--- a/scripts/sequencing_rpoB/analyses/post_bamm_analysis.qmd
+++ b/scripts/sequencing_rpoB/analyses/post_bamm_analysis.qmd
@@ -420,6 +420,8 @@ We can look at diversification rates change through time to see if diversificati
 #| fig.height: 5
 #| fig.width: 12
 
+plotRateThroughTime(edata)
+
 # get rate through time estimates
 rtt <- getRateThroughTimeMatrix(edata)
 
