--- a/scripts/sequencing_rpoB/analyses/estimating_transition_rates.qmd
+++ b/scripts/sequencing_rpoB/analyses/estimating_transition_rates.qmd
@@ -106,6 +106,10 @@ library(ggraph)
 library(GGally)
 library(ggrepel)
 
+# set where I am in the project
+here::i_am('scripts/sequencing_rpoB/analyses/estimating_transition_rates.qmd')
+
+
 # read in metadata
 d_meta <- read.csv(here('data/sequencing_rpoB/processed/asv_metadata.csv'))
 
@@ -194,7 +198,7 @@ coding <- tibble(hab_pref = unname(hab_pref), hab_pref_num = unname(hab_pref_num
 coding
 
 # save out habitat preference vector
-saveRDS(hab_pref, here("sequencing_rpoB/data/processed/hab_pref_vec.rds"))
+saveRDS(hab_pref, here("data/sequencing_rpoB/processed/hab_pref_vec.rds"))
 
 ```
 
@@ -216,18 +220,18 @@ ancestral_states_ape1 <- ace(hab_pref, tree, model="SYM", type="discrete")
 ancestral_states_ape2 <- ace(hab_pref, tree, model="ARD", type="discrete")
 
 # save out files
-saveRDS(ancestral_states_ape, here('sequencing_rpoB/data/processed/ancestral_states/ancestral_states_ape.rds'))
-saveRDS(ancestral_states_ape1, here('sequencing_rpoB/data/processed/ancestral_states/ancestral_states_ape1.rds'))
-saveRDS(ancestral_states_ape2, here('sequencing_rpoB/data/processed/ancestral_states/ancestral_states_ape2.rds'))
+saveRDS(ancestral_states_ape, here('data/sequencing_rpoB/processed/ancestral_states/ancestral_states_ape.rds'))
+saveRDS(ancestral_states_ape1, here('data/sequencing_rpoB/processed/ancestral_states/ancestral_states_ape1.rds'))
+saveRDS(ancestral_states_ape2, here('data/sequencing_rpoB/processed/ancestral_states/ancestral_states_ape2.rds'))
 ```
 
 ```{r ape_1_load}
 #| echo: false
 
 # read in files
-ancestral_states_ape <- readRDS(here('sequencing_rpoB/data/processed/ancestral_states/ancestral_states_ape.rds'))
-ancestral_states_ape1 <- readRDS(here('sequencing_rpoB/data/processed/ancestral_states/ancestral_states_ape1.rds'))
-ancestral_states_ape2 <- readRDS(here('sequencing_rpoB/data/processed/ancestral_states/ancestral_states_ape2.rds'))
+ancestral_states_ape <- readRDS(here('data/sequencing_rpoB/processed/ancestral_states/ancestral_states_ape.rds'))
+ancestral_states_ape1 <- readRDS(here('data/sequencing_rpoB/processed/ancestral_states/ancestral_states_ape1.rds'))
+ancestral_states_ape2 <- readRDS(here('data/sequencing_rpoB/processed/ancestral_states/ancestral_states_ape2.rds'))
 ```
 
 ```{r ape_1_norun}
