--- a/scripts/sequencing_rpoB/analyses/post_bamm_analysis.qmd
+++ b/scripts/sequencing_rpoB/analyses/post_bamm_analysis.qmd
@@ -28,15 +28,13 @@ From the online documentation of BAMM, we are following [Section 8](http://bamm-
 ## Progress and Results
 
 -   We have plotted all the "core" shifts on the whole of the phylogenetic tree
--   Currently running bamm for the fourth time to check convergence
--   Identifies lots of shifts, but all of them have low probability
+-   Identifies lots of shift configurations, but all of them have low probability
 -   Best model has at \~35 shifts
 -   Have identified areas with a high density of potential shifts
 
 ## Possibilities
 
 -   Macroevolutionary cohort analysis. An introduction to this is [here](http://bamm-project.org/rateshifts.html#analysis-of-rate-shifts-in-the-bamm-framework) and explained in more detail [here](https://academic.oup.com/sysbio/article/63/4/610/2848733?login=false).
--   Can get an estimate of evolutionary rate through time and also tip specific diversification rates. Not sure what these could be used for.
 -   Do we need to re-run the model at different levels of sampled diversity to check if the results are robust?
 
 ## Load in R packages
@@ -46,10 +44,11 @@ First we will load in R packages used and the metadata file used and wrangled in
 ```{r load_packages}
 #| results: false
 
+set.seed(42)
+
 # load packages
 library(here)
 library(caper)
-library(tidyverse)
 library(ggtree)
 library(ggnewscale)
 library(RColorBrewer)
@@ -60,18 +59,15 @@ library(BAMMtools)
 library(coda)
 library(MetBrewer)
 library(fastdivrate) # remotes::install_github("jonchang/fastdivrate")
-library(brms)
 library(nlme)
 library(emmeans)
+library(tidyverse)
 
 # set where I am in the project
 here::i_am('scripts/sequencing_rpoB/analyses/post_bamm_analysis.qmd')
 
 # read in metadata
 d_meta <- read.csv(here('data/sequencing_rpoB/processed/asv_metadata.csv'))
-
-# read in habitat trait colours
-cols_hab <- readRDS(here('data/sequencing_rpoB/processed/habitat_colours.rds'))
 
 ```
 
@@ -92,8 +88,17 @@ is.rooted(tree)
 # check is ultrametric
 is.ultrametric(tree)
 
+# grab lineage through time data
+d_ltt <-  ape::ltt.plot.coords(tree) %>%
+  data.frame() %>%
+  mutate(time2 = time + 1)
+
 # create lineage through time plot
-ape::ltt.plot(tree)
+ggplot(d_ltt, aes(time2, N)) +
+  geom_line() +
+  theme_bw(base_size = 14) +
+  labs(x = 'Relative time',
+       y = 'Number of lineages')
 
 ```
 
@@ -107,7 +112,7 @@ mcmcout <- read.csv(here("data/sequencing_rpoB/bamm/bamm_1_mcmc_out.txt"), heade
 max(mcmcout$generation)
 
 # discard some runs as burnin. We will discard the first 10% of samples
-burnstart <- floor(0.1 * nrow(mcmcout))
+burnstart <- floor(0.4 * nrow(mcmcout))
 postburn <- mcmcout[burnstart:nrow(mcmcout), ]
 
 # calculate effective sample size
@@ -115,7 +120,7 @@ effectiveSize(postburn$N_shifts)
 effectiveSize(postburn$logLik)
 ```
 
-In general, we want the effective sample size values to be at least 200 (and 200 is on the low side, but might be reasonable for very large datasets). Both are now over well over 200 here so that is good. We have re-ran the results a few times but never for this number of iterations. We are currently re-running the analysis again with a wider prior to see how that helps convergence. This run was 31,920,000 iterations.
+In general, we want the effective sample size values to be at least 200 (and 200 is on the low side, but might be reasonable for very large datasets). Both are now close to 200 with a 40% burnin.
 
 Next we can look at the number of potential rate shifts.
 
@@ -126,7 +131,7 @@ Next we can look at the number of potential rate shifts.
 post_probs <- table(postburn$N_shifts) / nrow(postburn)
 names(post_probs)
 
-edata <- getEventData(tree, eventdata = here('data/sequencing_rpoB/bamm/bamm_1_event_data.txt'), burnin = 0.1)
+edata <- getEventData(tree, eventdata = here('data/sequencing_rpoB/bamm/bamm_1_event_data.txt'), burnin = 0.4)
 shift_probs <- summary(edata)
 
 # plot these
@@ -144,7 +149,7 @@ n_shifts_ci
 
 ```
 
-This looks like it has converged, but also there is a huge range of potential values and the 95% credible intervals of the number of range shifts is huge!
+The model has converged, and we also now have a narrow(ish) range of potential values for the number of range shifts (between 23 and 34).
 
 The maintainers or BAMM suggest that (usually) the best overall model from a BAMM analysis is the model with the highest Bayes factor relative to the null model, $M_{0}$, which has zero rate shifts. However, we do not have any samples of zero shifts in our postburn in sample `r min(postburn$N_shifts)`! However, we do have zero shifts in our preburn-in samples as can be seen here `r min(mcmcout$N_shifts)`.
 
@@ -173,15 +178,26 @@ d_bayes_factors <- arrange(d_bayes_factors, desc(bayes_factor)) %>%
 head(d_bayes_factors)
 ```
 
-We can see only 3 models have a Bayesfactor within 20 of the best model, which gives us a set of 4 models, indicating we have between 27 and 35 rate shifts on the tree.
+We can see the best model with 27 shifts is \>20 away from the next best model, implying strong evidence that the best fit to the data contains 27 shifts.
 
-**BAMMtools** also has a function for visualizing the prior and posterior simultaneously. This is useful to see what models are not being sampled in the posterior, and also to evaluate how far from the prior the posterior has moved.
+**BAMMtools** also has a function for visualising the prior and posterior simultaneously. This is useful to see what models are not being sampled in the posterior, and also to evaluate how far from the prior the posterior has moved.
 
 ```{r plot_prior_posterior}
 #| fig.height: 5
 #| fig.width: 7
 # use plotPrior to visualise the prior and posterior simultaneously
-plotPrior(mcmcout, expectedNumberOfShifts=500)
+d_prior <- plotPrior(mcmcout, expectedNumberOfShifts=500, burnin = 0.4) %>%
+  data.frame() %>%
+  janitor::clean_names() %>%
+  pivot_longer(cols = contains('probs'), names_to = 'type', values_to = 'prob', names_pattern = "(.*)_probs")
+
+ggplot(d_prior, aes(n_shifts, prob, fill = type)) +
+  geom_bar(col = 'black', stat = 'identity', position=position_dodge()) +
+  theme_bw(base_size = 14) +
+  scale_fill_manual('', values = c('grey', 'black'), labels = c('posterior', 'prior')) +
+  labs(x = 'Number of shifts',
+       y = 'Probability') +
+  theme(legend.position = c(0.2, 0.8))
 
 ```
 
@@ -217,7 +233,7 @@ plot.credibleshiftset(d_css)
 
 ```
 
-However, as can be seen from the summary, even the single best shift configuration has a really low posterior probability (\<0.005). It also picks a model with only 4 core shifts, despite the lower 95%CI of numbers of shifts being 14. So to me this means that although the best model has \~35 shifts and the minimum 95%CI of shifts is 14, lots of those shifts are in non-core positions most of the time.
+However, as can be seen from the summary, even the single best shift configuration has a really low posterior probability (0.00125). Although the best model supports 27 shifts, not all of these are core shifts. There are only 18-22 core shifts identified in the best model shift configurations here.
 
 For some datasets with large numbers of taxa and rate shifts (e.g., trees with thousands of taxa), all shift configurations may have low probability. There are simply too many parameters in the model to allow a single shift configuration to dominate the credible set. An alternative approach is to extract the shift configuration that maximises the marginal probability of rate shifts along individual branches. This is very similar to the idea of a maximum clade credibility tree in phylogenetic analysis. BAMM has a function `maximumShiftCredibility` for extracting this shift configuration:
 
@@ -234,7 +250,7 @@ plot.bammdata(msc_config, lwd=2)
 addBAMMshifts(msc_config, cex = 2)
 ```
 
-This picks a model with just 8 rate shifts over the whole tree.
+This picks a model with 22 rate shifts over the whole tree.
 
 We can try and plot these shifts using ggtree. First we will look at the distribution of speciation rates across the tree. We need to be careful about our colour scale to prevent it being misleading.
 
@@ -286,185 +302,160 @@ p1 + p2
 
 We will use the log edge lengths/rates of diversification because they result in a more even spread of diversification rates across a range of values.
 
-Now we can plot the tree.
+Now we can plot the tree. We will try plot the family assignment around the edge of the tree. We also need to assign the colours the same as before.
 
 ```{r plot_ggtree}
 #| fig.height: 12
 #| fig.width: 12
+# constrained families
+constrained_families <- c('Myxococcaceae', 'Vulgatibacteraceae', 'Anaeromyxobacteraceae', 'Polyangiaceae', 'Sandaracinaceae', 'Nannocystaceae', 'Haliangiaceae')
+
+# find the mrca of each of the constrained families
+d_meta2 <- filter(d_meta, family %in% constrained_families) %>%
+  dplyr::select(family, tip_label) %>%
+  group_by(family) %>%
+  nest() %>%
+  mutate(mrca = NA)
+
+for(i in 1:nrow(d_meta2)){
+  d_meta2$mrca[i] <- findMRCA(tree_bamm, tips = d_meta2$data[[i]]$tip_label)
+}
+
+d_meta2 <- dplyr::select(d_meta2, family2 = family, mrca) %>%
+  mutate(blank_label = '')
+
+# add colour for the different families
+cols <- c(colorRampPalette(brewer.pal(11, "Spectral"))(nrow(d_meta2)))
+names(cols) <- sort(d_meta2$family2)
+
+# define colours for the different habitats
+cols_hab <- met.brewer('Austria', n = 7)
+names(cols_hab) <- c('mud_and_shore', 'freshwater', 'terrestrial', 'freshwater:terrestrial', 'generalist', 'mud_and_shore:terrestrial', 'freshwater:mud_and_shore')
+hab_labels <- c('marine mud', 'freshwater', 'terrestrial', 'freshwater + terrestrial', 'generalist', 'marine mud + terrestrial', 'freshwater + marine mud')
+
 # remove any tip labels not in our tree from d_meta
 d_meta <- filter(d_meta, tip_label %in% tree_bamm$tip.label)
+
+# make a separate column for the rare states to make their size bigger!
+d_meta <- mutate(d_meta, rare = ifelse(habitat_preference %in% c('generalist', 'mud_and_shore:terrestrial'), 'rare', 'common'))
 
 # plot tree using ggtree
 # first colour branches and add rate shifts
 p1 <- ggtree(tree_bamm, layout = 'circular', branch.length = 'none', aes(col = log_edge_length)) %<+% d_tree_bamm +
-scale_color_gradientn('Net diversification', colors = met.brewer(name='Hiroshige', direction=-1, override.order = F), breaks=c(min(d_tree_bamm$log_edge_length, na.rm = TRUE) * 1.1,max(d_tree_bamm$log_edge_length, na.rm = TRUE) * 0.95), labels=c("Slow","Fast")) +
-geom_point2(aes(subset=(node %in% shiftnodes)), color="black",size=8)
+scale_color_gradientn('Net diversification (branch colours)', colors = met.brewer(name='Hiroshige', direction=-1, override.order = F), breaks=c(min(d_tree_bamm$log_edge_length, na.rm = TRUE) + abs(min(d_tree_bamm$log_edge_length, na.rm = TRUE))*0.2, max(d_tree_bamm$log_edge_length, na.rm = TRUE) * 0.95), labels=c("Slow","Fast")) +
+geom_point2(aes(subset=(node %in% shiftnodes)), color="black",size=5)
 
 # next add tip points
-p1 %<+% d_meta +
-new_scale_color() +
-geom_tippoint(aes(x=x+5, col = hab1, fill = hab2), size = 0.8, shape = 21, position = position_jitter(width = 2, height = 0)) +
-scale_color_manual('Habitat preference', values = cols_hab, labels = c('terrestrial', 'freshwater', 'marine mud', 'generalist')) +
-scale_fill_manual('Habitat preference', values = cols_hab, labels = c('terrestrial', 'freshwater', 'marine mud', 'generalist'))
-```
+p2 <- p1 %<+% d_meta +
+  new_scale_color() +
+  geom_tippoint(aes(x=x+5, col = habitat_preference, size = rare), position = position_jitter(width = 3, height = 0)) +
+  scale_color_manual('Habitat preference (tip points)', values = cols_hab, labels = hab_labels) +
+  scale_size_manual(values = c(0.6, 2)) +
+  guides(color = guide_legend(override.aes = list(size = 5)),
+         size = 'none')
 
-Alternatively to look at "hotspots" of core shifts we can average over all the fits to get the average rates across all the iterations of the model, and grab out all the core shifts and plot them on a single plot.
+p2 +
+  new_scale_colour() +
+  geom_cladelab(data = d_meta2,
+                mapping = aes(node = mrca,
+                              color = family2,
+                              label = blank_label),
+                offset = 10,
+                barsize = 2) +
+  scale_color_manual('Family (outer bar)', values = cols) +
+  guides(color = guide_legend(override.aes = list(size = 5)))
 
-To do this we will first estimate the rates of diversification on the branches. We will do this once and then save out the file as it takes so long, then not evaluate it going forward!
-
-```{r get_branch_lengths}
-#| eval: false
-
-# get mean phylorates that underly the colorised plot produced by plot.bammdata
-# from here: https://groups.google.com/g/bamm-project/c/W6s38xzm6OU/m/LALF47xVS54J
-mbt <- getMeanBranchLengthTree(edata, rate = "ndr")
-
-# save out mean branch lengths
-saveRDS(mbt, here('data/sequencing_rpoB/processed/bamm_1_ndr_branch_lengths.rds'))
-
-```
-
-```{r plot_ggtree2}
-#| fig.height: 12
-#| fig.width: 12
-
-# read in branch length data
-mbt <- readRDS(here('data/sequencing_rpoB/processed/bamm_1_ndr_branch_lengths.rds'))
-
-# get shift nodes from all of the events in the 
-shiftnodes <- unlist(d_css$shiftnodes) %>% unique()
-
-# save out shift nodes
-saveRDS(shiftnodes, here('data/sequencing_rpoB/processed/shiftnodes.rds'))
-
-# get tree
-tree_bamm <- mbt$phy
-
-# remove family name from the tip label
-d_labels <- data.frame(tip_label = tree_bamm$tip.label) %>%
-  separate(., tip_label, c('part1', 'part2', 'part3'), sep = '_', remove = FALSE) %>%
-  unite('tip_label_new', c(part1, part2), sep = '_')
-
-tree_bamm$tip.label <- d_labels$tip_label_new
-
-# get the edge lengths in a dataframe
-d_tree_bamm <- data.frame(tree_bamm$edge, edge_num=1:nrow(tree_bamm$edge), edge_length = tree_bamm$edge.length)
-colnames(d_tree_bamm)=c("parent", "node", "edge_num", 'edge_length')
-
-# transform these to log for the colour scale
-d_tree_bamm <- mutate(d_tree_bamm, log_edge_length = log(edge_length))
-
-p1 <- ggtree(tree_bamm, layout = 'circular', branch.length = 'none', aes(col = edge_length)) %<+% d_tree_bamm +
-scale_color_gradientn('Diversification rate', colors = met.brewer(name='Hiroshige', direction=-1, override.order = F), breaks=c(min(d_tree_bamm$edge_length, na.rm=TRUE) + (abs(min(d_tree_bamm$edge_length, na.rm=TRUE) * 1)),max(d_tree_bamm$edge_length, na.rm=TRUE) * 0.95), labels=c("Slow","Fast")) +
-geom_point2(aes(subset=(node %in% shiftnodes)), color="black",size=4, alpha = 0.5)
-
-# next add tip points
-p1 %<+% d_meta +
-new_scale_color() +
-geom_tippoint(aes(x=x+5, col = hab1, fill = hab2), size = 0.8, shape = 21, position = position_jitter(width = 2, height = 0)) +
-scale_color_manual('Habitat preference', values = cols_hab, labels = c('terrestrial', 'freshwater', 'marine mud', 'generalist')) +
-scale_fill_manual('Habitat preference', values = cols_hab, labels = c('terrestrial', 'freshwater', 'marine mud', 'generalist')) +
-guides(color = guide_legend(override.aes = list(size = 5)),
-       fill = guide_legend(override.aes = list(size = 5)))
-
-
-# save plot out
-ggsave(here('plots/sequencing_rpoB/analyses/bamm_all_tree.png'), last_plot(), height = 9, width = 12)
-```
-
-## Identify nodes where transitions are occurring
-
-To be able to visualise where habitat transitions are occurring, we can create interactive plots of our trees using plotly and save them to file. As plotly currently does not support some ggtree geoms (**geom_point2()**) or **ggnewscale()** we will have to grab the data from the tree and use **geom_point()**. We will also create a separate plot with the transitions and the rates on and with the points and the habitats on.
-
-```{r plotly}
-#| eval: false
-
-# create plot for plotly to identify nodes to subset
-p_for_plotly <- ggtree(tree_bamm, branch.length = 'none', aes(col = edge_length)) %<+% d_tree_bamm +
-scale_color_gradientn('Speciation rate', colors = met.brewer(name='Hiroshige', direction=-1, override.order = F), breaks=c(min(d_tree_bamm$edge_length, na.rm=TRUE) + (abs(min(d_tree_bamm$edge_length, na.rm=TRUE) * 1)),max(d_tree_bamm$edge_length, na.rm=TRUE) * 0.95), labels=c("Slow","Fast")) +
-  NULL
-
-# grab dataset so plotly renders properly
-d_plotly <- p_for_plotly$data %>%
-  left_join(., dplyr::rename(d_meta, label = tip_label)) %>%
-  mutate(label2 = node)
-
-# cant have two colour scales on plotly at present
-# make one plotly with just the transitions and the colours depicting rates of speciation
-p_for_plotly <- p_for_plotly %<+% d_meta +
-  geom_point(aes(x, y, label = label2), size = 3, alpha = 0.6, filter(d_plotly, node %in% shiftnodes), col = 'black') +
-  geom_point(aes(x, y, label = label2), size = 1, alpha = 0.1, filter(d_plotly, ! node %in% shiftnodes), col = 'black') +
-  coord_flip()
-
-htmlwidgets::saveWidget(plotly::ggplotly(p_for_plotly), here('sequencing_rpoB/plots/analyses/tree_plot_bamm.html'))
-
-# make one which has no colours for the rates of speciation but has colours for the habitats at the tip
-p_for_plotly <- ggtree(tree_bamm, branch.length = 'none') %<+% 
-  d_plotly +
-  geom_point(aes(x, y, label = label2), size = 3, alpha = 0.6, filter(d_plotly, node %in% shiftnodes), col = 'black') +
-  geom_point(aes(x, y, label = label2), size = 1, alpha = 0.1, filter(d_plotly, ! node %in% shiftnodes), col = 'black') +
-  geom_point(aes(x, y, col = hab1, fill = hab2), size = 0.8, shape = 21, position = position_jitter(width = 2, height = 0), filter(d_plotly, isTip == TRUE)) +
-scale_color_manual('Habitat preference', values = cols_hab, labels = c('terrestrial', 'freshwater', 'marine mud', 'generalist')) +
-scale_fill_manual('Habitat preference', values = cols_hab, labels = c('terrestrial', 'freshwater', 'marine mud', 'generalist')) +
-  coord_flip()
-
-htmlwidgets::saveWidget(plotly::ggplotly(p_for_plotly), here('sequencing_rpoB/plots/analyses/tree_plot_transitions.html'))
-
+ggsave(here('plots/sequencing_rpoB/analyses/bamm_tree.png'), last_plot(), height = 9, width = 12)
 ```
 
 ## Rate variation through time
 
 We can look at diversification rates change through time to see if diversification in general is faster or slower deeper in the tree, and therefore further back in evolutionary time.
 
+We can also grab the rates through time for all the sub-trees after a rate shift to see how they compare. To do this we need to write our own function to process the data and get it ready for plotting.
+
 ```{r get_rate_through_time}
 #| fig.height: 5
-#| fig.width: 12
+#| fig.width: 17
 
-plotRateThroughTime(edata)
-
-# get rate through time estimates
-rtt <- getRateThroughTimeMatrix(edata)
-
-# grab different parts
-rtt_sp <- rtt$lambda %>%
+# write function to get rate through time into the correct format
+get_rate_through_time_df <- function(ephy, ...){
+  rtt <- getRateThroughTimeMatrix(ephy, ...)
+  
+  # get dataframe of each part
+  # first speciation
+  rtt_sp <- rtt$lambda %>%
   data.frame() %>%
   mutate(sample = 1:n()) %>%
-  pivot_longer(starts_with('X'), names_to = 'time_point', values_to = 'rate') %>%
-  mutate(time_point = parse_number(time_point),
-  rate_type = 'speciation') %>%
+  pivot_longer(starts_with('X'), names_to = 'time_point', values_to = 'speciation') %>%
+  mutate(time_point = parse_number(time_point)) %>%
   group_by(sample) %>%
   mutate(time = unname(rtt$times)) %>%
   ungroup()
-rtt_ex <- rtt$mu %>%
+  
+  # second extinction
+  rtt_ex <- rtt$mu %>%
   data.frame() %>%
   mutate(sample = 1:n()) %>%
-  pivot_longer(starts_with('X'), names_to = 'time_point', values_to = 'rate') %>%
-  mutate(time_point = parse_number(time_point),
-  rate_type = 'extinction') %>%
+  pivot_longer(starts_with('X'), names_to = 'time_point', values_to = 'extinction') %>%
+  mutate(time_point = parse_number(time_point)) %>%
   group_by(sample) %>%
   mutate(time = unname(rtt$times)) %>%
   ungroup()
+  
+  rtt_comb <- left_join(rtt_sp, rtt_ex)
+  
+  rtt_comb <- mutate(rtt_comb, net_div = speciation - extinction) %>%
+    pivot_longer(cols = c(speciation, extinction, net_div), names_to = 'process', values_to = 'rate')
+  
+  return(rtt_comb)
+}
 
-rtt_combine <- bind_rows(rtt_sp, rtt_ex)
+# get rate through time estimates for the whole tree
+rtt_all <- get_rate_through_time_df(ephy = edata)
 
 # create means
-rtt_combine_means <- group_by(rtt_combine, time_point, rate_type, time) %>%
-  summarise(ave_rate = mean(rate), .groups = 'drop')
+rtt_combine_means <- group_by(rtt_all, time_point, process, time) %>%
+  summarise(ave_rate = mean(rate), .groups = 'drop',
+            lower_ci = quantile(rate, 0.025),
+            upper_ci = quantile(rate, 0.975))
+
+# get rate through time estimates for each shift node
+rtt_shift <- tibble(shift_node = shiftnodes,
+                    n = 1:length(shiftnodes)) %>%
+  nest(data = shift_node) %>%
+  mutate(temp = purrr::map(data, possibly(~get_rate_through_time_df(ephy = edata, node = .x$shift_node, nodetype = 'include'), otherwise = NA_real_)),
+         is_tib = purrr::map_dbl(temp, is_tibble))
+
+rtt_shift_nowork <- filter(rtt_shift, is_tib == 0) %>%
+  dplyr::select(data) %>% unnest(data)
+rtt_shift2 <- filter(rtt_shift, is_tib == 1) %>%
+  dplyr::select(data, temp) %>%
+  unnest(data) %>%
+  unnest(temp)
+
+# create means
+rtt_shift_means <- group_by(rtt_shift2, time_point, process, time, shift_node) %>%
+  summarise(ave_rate = mean(rate), .groups = 'drop',
+            lower_ci = quantile(rate, 0.025),
+            upper_ci = quantile(rate, 0.975))
 
 # create a plot
 ggplot() +
-  geom_line(aes(time, rate, group = sample), alpha = 0.01, rtt_combine) +
+  geom_line(aes(time, ave_rate, group = shift_node), rtt_shift_means, col = 'dark grey') +
+  geom_ribbon(aes(time, ymin = lower_ci, ymax = upper_ci, group = shift_node), alpha = 0.01, rtt_shift_means, fill = 'dark grey') +
   geom_line(aes(time, ave_rate), rtt_combine_means) +
-  facet_wrap(~rate_type, scales = 'free') +
+  geom_ribbon(aes(time, ymin = lower_ci, ymax = upper_ci), alpha = 0.1, rtt_combine_means) +
+  facet_wrap(~process, scales = 'free') +
   theme_bw(base_size = 14) +
-  labs(x = 'time before present',
+  labs(x = 'Relative time',
        y = 'rate')
 
 # save plot out
 ggsave(here('plots/sequencing_rpoB/analyses/bamm_rate_through_time.png'), last_plot(), height = 5, width = 12)
 ```
 
-So something extremely ubiquitous, and likely linked to the features of the ultrametric tree, is happening in the tree. I do not know whether or not this is a big problem, or how we can deal with this or alter the tree to make this less of a big deal.
+You can see that after a shift node there is generally a rapid acceleration in diversification and speciation rate, after which we see a decline, whereas extinction rate rises quickly and then plateaus through time. The uncertainty around these node specific estimates is very high, but the general pattern appears to hold.
 
 ## Looking at tip-specific evolutionary rates
 
@@ -561,7 +552,7 @@ ggplot(d_tipdr, aes(forcats::fct_reorder(hab_pref_axis, n), tip_dr)) +
        y = 'tip DR (speciation rate)')
 ```
 
-This method also shows very little variation in the estimated tip-level speciation rate between traits. It does look like marine mud may have a lower rate. This is interesting because the results from BAMM also indicate marine mud has a much lower variance of rates and a high density of tips with low speciation rates.
+This method also shows very little variation in the estimated tip-level speciation rate between traits. It does look like marine mud may have a faster speciation rate than the others. This is interesting because the results from BAMM also indicate marine mud has a higher speciation rate.
 
 This again is something to discuss further with Rutger as I am not sure exactly where to go with the remainder of this analysis. These sorts of statistics may be very useful where fitting of SSE models with rate changes within the state are not possible. This may be something to consider with our dataset where the number of parameters in the MuHiSSE would be so big.
 
@@ -572,114 +563,107 @@ We will first do this using **nlme::lme()** as described in Liam Revell's and Lu
 ```{r pgls_nlme_run}
 #| eval: false
 
+# remove family name from the tip label
+d_labels <- data.frame(tip_label = tree$tip.label) %>%
+  separate(., tip_label, c('part1', 'part2', 'part3'), sep = '_', remove = FALSE) %>%
+  unite('tip_label_new', c(part1, part2), sep = '_')
+
+tree$tip.label <- d_labels$tip_label_new
+
 # set up correlation matrix for the tree
 cor_lambda <- corPagel(value = 1, phy = tree, form = ~tip_label)
 
 # fit phylogenetic generalised linear model
 mod <- gls(tip_dr ~ habitat_preference, data = d_tipdr, correlation = cor_lambda)
-mod1 <- gls(log(tip_dr) ~ habitat_preference, data = d_tipdr, correlation = cor_lambda)
-
-# save out mean branch lengths
-saveRDS(mod, here('sequencing_rpoB/data/processed/tipDR_pgls.rds'))
-saveRDS(mod1, here('sequencing_rpoB/data/processed/tipDR_pgls_log.rds'))
-```
-
-```{r pgls_nlme}
-#| eval: false
-
-# read in model
-mod <- readRDS(here('sequencing_rpoB/data/processed/tipDR_pgls.rds'))
-
-# need to check model assumptions - graph
-performance::check_model(mod)
 
 # do contrasts between habitat preferences
 contrasts <- emmeans(mod, pairwise ~ habitat_preference)
 
+# save out mean branch lengths
+saveRDS(mod, here('data/sequencing_rpoB/processed/tipDR_pgls.rds'))
+saveRDS(contrasts, here('data/sequencing_rpoB/processed/tipDR_pgls_contrasts.rds'))
+```
+
+```{r pgls_nlme}
+# remove family name from the tip label
+d_labels <- data.frame(tip_label = tree$tip.label) %>%
+  separate(., tip_label, c('part1', 'part2', 'part3'), sep = '_', remove = FALSE) %>%
+  unite('tip_label_new', c(part1, part2), sep = '_')
+
+tree$tip.label <- d_labels$tip_label_new
+
+# set up correlation matrix for the tree
+cor_lambda <- corPagel(value = 1, phy = tree, form = ~tip_label)
+
+# read in model
+mod <- readRDS(here('data/sequencing_rpoB/processed/tipDR_pgls.rds'))
+
+summary(mod)
+
+# read in contrasts
+contrasts <- readRDS(here('data/sequencing_rpoB/processed/tipDR_pgls_contrasts.rds'))
+```
+
+So the model fits and is ok. The estimate of Pagel's lambda - the phylogenetic signal - is 0.83 which is quite high. There are no significant differences between any of the habitat preferences in terms of their speciation rate though.
+
+## Defining each tip as either high diversification or low diversification
+
+One of the main questions we are interested in is whether we see a increase in the diversification rate AFTER a transition, but this is a difficult thing to test using either the BAMM model or state-dependent speciation and extinction models.
+
+One alternative might be to create a new variable of high and low diversification rate for each tip, and then combine this with habitat preference when we explore transition rate models.
+
+We can look at the distribution of tip rates, irregardless of habitat preference.
+
+```{r tip_rate_dist}
+#| fig.height: 5
+#| fig.width: 7
+
+ggplot(tip_rates, aes(net_diversification)) +
+  geom_histogram(fill = 'white', col = 'black') +
+  theme_bw()
 
 ```
 
-So the model fits, but is not very good. All of the standard errors are extremely
+There is a hint that this model is bimodal. We can run a k-means clustering on it to try and split it into two groups.
 
-We will first do this using **caper::pgls()** using the example code and workthrough [here](https://nhcooper123.github.io/pcm-primer-online/phylogenetic-generalised-least-squares-pgls-in-r.html). We did not run this after running the **gls()** example because they should be equivalent.
+```{r split_tip_rate}
+#| fig.height: 5
+#| fig.width: 7
+# do very crude kmeans clustering
+mod_clust <- kmeans(tip_rates$net_diversification, 2, algo="Lloyd")
 
-```{r do_pgls}
-#| eval: false
+# add this to our dataset
+tip_rates <- mutate(tip_rates, cluster = as.character(mod_clust$cluster),
+                    div_rate = ifelse(cluster == '1', 'low', 'high'))
 
-# create comparative data set for caper
-tree2 <- tree
-tree2$node.label <- 1:length(tree2$node.label)
+ggplot(tip_rates, aes(net_diversification, fill = div_rate)) +
+  geom_histogram(col = 'black') +
+  theme_bw(base_size = 14) +
+  theme(legend.position = c(0.8, 0.8))
 
-d_tipdr <- data.frame(d_tipdr)
 
-d_caper <- comparative.data(phy = tree2, data = d_tipdr, names.col = tip_label, vcv = TRUE, na.omit = FALSE, warn.dropped = TRUE)
-
-# check dropped species
-d_caper$dropped$unmatched.rows
-d_caper$dropped$tips
-
-# delete any 0 length branches and collapse them into polytomies
-d_caper$phy <- di2multi(d_caper$phy)
-  
-# fit a pgls model using caper
-mod <- pgls(tip_dr ~ 0 + as.factor(habitat_preference), data = d_caper, lambda = 'ML')
-
-# this takes a long time
-
-# plot model diagnostics
-# First make a plotting window with four panes as there are four plots
-par(mfrow = c(2, 2))
-# Now plot the model diagnostics
-plot(mod)
-
-# Return the plot window to one pane for later plotting
-par(mfrow = c(1, 1))
-# the qqplot is not good, so lets take the log
-
-# Create a likelihood profile of the lambda estimate
-lambda_profile <- pgls.profile(mod, "lambda")
-# Plot the likelihood profile
-plot(lambda_profile)
-
-# fit a pgls model using caper
-mod2 <- pgls(log(tip_dr) ~ as.factor(habitat_preference), data = d_caper, lambda = 'ML')
-
-# First make a plotting window with four panes as there are four plots
-par(mfrow = c(2, 2))
-# Now plot the model diagnostics
-plot(mod2)
-
-# Return the plot window to one pane for later plotting
-par(mfrow = c(1, 1))
 ```
 
-We can also fit the equivalent model in a Bayesian framework using **brms**.
+We can count the number of each combination of diversification rate (high or low) and each habitat preference to see whether we have some common and rare states.
 
-Both of these methods rely on us first converting our phylogenetic tree into a correlation structure. The correlation structure will then be used to define the distribution of the residuals from our linear model.
+```{r check_numbers}
+# check number in each diversity rate bin: high and low
+group_by(tip_rates, div_rate) %>%
+  tally()
 
-First we will try a Bayesian approach. This takes too long to run lol.
+# check per diversity rate bin/habitat preference combination
+group_by(tip_rates, habitat_preference, div_rate) %>%
+  tally() %>%
+  group_by(habitat_preference) %>%
+  mutate(prop = round(n/sum(n), 2)) %>%
+  ungroup()
+```
 
-```{r phylo_brms}
-#| eval: false
+Ok this looks semi-sensible. We will now save this dataset out to try and fit some transition models to the habitat preference by diversification rate bin.
 
-# create a covariance matrix of species
-sp_vcv <- ape::vcv.phylo(tree)
+```{r save_out}
+saveRDS(dplyr::select(tip_rates, tip_label, div_rate), here('data/sequencing_rpoB/processed/div_rate_bins.rds'))
 
-# fit model
-model_simple <- brm(
-  tip_dr ~ habitat_preference + (1|gr(tip_label, cov = sp_vcv)), 
-  data = d_tipdr, 
-  family = gaussian(), 
-  data2 = list(sp_vcv = sp_vcv),
-  prior = c(
-    prior(normal(0, 10), "b"),
-    prior(normal(0, 50), "Intercept"),
-    prior(student_t(3, 0, 20), "sd"),
-    prior(student_t(3, 0, 20), "sigma")
-  ),
-  chains = 1,
-  iter = 1000
-)
 ```
 
 ## Useful links used
